--- a/LemonadeStand/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand/LemonadeStand.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Day.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Inventory.cs" />
+    <Compile Include="LostGame.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
